trying to fix overflow on iphone

--- a/portfolio.css
+++ b/portfolio.css
@@ -173,6 +173,8 @@ pre.prettyprint {
 	height: 300px;
 	overflow-y: auto;
 	overflow-x: auto;
+	white-space: nowrap;
+	text-overflow: clip;
 }
 
 img {
